# gilded-rose

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: test.yml  verify.yml
gildedrose_console/: gilded_rose.py
test/: test_assemblytests.py  test_gildedrose.py  test_gildedrose_console.py
